# micrograd_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.ipynb  pyproject.toml  trace_graph.ipynb
.cursor/plans/: cuda_support_with_cudarc_e3aa4aaf.plan.md  rust_micrograd_with_pyo3_ff9c0a4d.plan.md  tensor_autograd_+_cuda_batching_4803f83e.plan.md
benchmarks/: benchmark_device.py  benchmark_gpu.py  benchmark_tensor_nd.py  benchmark_value.py
docs/: 01.md  GPU_SUPPORT.md  GPU_TENSOR_OPS.md  IMPLEMENTATION.md  RUST_INTRO.md
examples/: README.md  demo.ipynb  gpu_demo.py  trace_graph.ipynb
python/micrograd_rs/: __init__.py
src/: cpu_kernels.rs  cuda_kernels.rs  device.rs  gpu.rs  lib.rs  nn.rs  tensor.rs  value.rs
tests/: test_device.py  test_engine.py  test_gpu.py  test_tensor_nd.py
