[package]
name = "micrograd_rs"
version = "0.1.0"
edition = "2021"
description = "A tiny autograd engine implemented in Rust with Python bindings"
license = "MIT"

[lib]
name = "micrograd_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
wgpu = { version = "23.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.14", optional = true }

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster", "bytemuck"]

