[package]
name = "micrograd_rs"
version = "0.1.0"
edition = "2021"
description = "A tiny autograd engine implemented in Rust with Python bindings"
license = "MIT"

[lib]
name = "micrograd_rs"
crate-type = ["cdylib"]

[features]
default = []
cuda = ["cudarc"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
cudarc = { version = "0.18", optional = true, features = ["cuda-version-from-build-system"] }

